--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch</h1>
 </body>
 </html>
