Pridanie odkazu na pokračovanie 30. TailWind - Barvy (text, pozadí, podržení)

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch</h1>
+    <a href="https://youtu.be/w2op98wzH6M?list=PLQ8x_VWW6AkvEw-pu4KNe0idPv2iPqsMm">Pokračovanie na 30. TailWind - Barvy (text, pozadí, podržení)</a>
 </body>
 </html>
